# pushcart

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  mypy.ini  poetry.toml  pyproject.toml  response.json
docs/: configuration_template.md  extension_system.md  index.md  log_handlers.md
docs/api/log_handlers/: app_insights_handler.md
docs/api/metadata/: metadata.md  spark.md
docs/api/sources/: rest_api.md
examples/: metadata.ipynb  rest_api.ipynb  split_nested.ipynb
pushcart/: metadata.py  plugins.py  utils.py
pushcart/log_handlers/: __init__.py  delta_table_handler.py
pushcart/metadata/: metadata.py  spark.py
pushcart/sources/rest_api/: request.py  spark.py
pushcart/transformations/dict/: sanitize_dict.py
pushcart/transformations/flatten_nested/: dlt.py  spark.py
pushcart/transformations/metadata/: metadata.py  spark.py
pushcart/transformations/split_nested/: dlt.py  spark.py
pushcart_app_insights/: README.md  pyproject.toml
pushcart_app_insights/src/pushcart_app_insights/: __init__.py
pushcart_app_insights/src/pushcart_app_insights/log_handlers/: __init__.py  app_insights_handler.py
pushcart_rest_api/: README.md  pyproject.toml
pushcart_rest_api/src/pushcart_rest_api/: __init__.py
pushcart_rest_api/src/pushcart_rest_api/stages/: __init__.py
pushcart_rest_api/src/pushcart_rest_api/stages/sources/: __init__.py  rest_api.py
src/pushcart/: __init__.py  cli.py  configuration.py  dbutils.py  plugins.py  utils.py
src/pushcart/log_handlers/: __init__.py  app_insights_handler.py  delta_table_handler.py
src/pushcart/metadata/: __init__.py  metadata.py  spark.py
src/pushcart/setup/: databricks_job_settings.py  deployment.py  job_settings.py  jobs_wrapper.py  release_job.json  repos_wrapper.py  secrets_wrapper.py
src/pushcart/sources/: __init__.py  rest_api.py
src/pushcart/stages/: __init__.py  autodiscovery.py  stage_base.py
src/pushcart/stages/destinations/: destination_base.py
src/pushcart/stages/sources/: __init__.py  autoloader.py  delta.py  source_base.py  table.py
src/pushcart/stages/transformations/: transformation_base.py
src/pushcart/validation/: common.py
test_table_path/: .part-00000-669a6fab-7881-4b21-aca2-b2db966507ad-c000.snappy.parquet.crc  .part-00011-2eabc630-f143-4871-a1fb-4168e64be945-c000.snappy.parquet.crc  part-00000-669a6fab-7881-4b21-aca2-b2db966507ad-c000.snappy.parquet  part-00011-2eabc630-f143-4871-a1fb-4168e64be945-c000.snappy.parquet
test_table_path/_delta_log/: .00000000000000000000.json.crc
tests/: test_configuration.py  test_delta_log_handler.py  test_metadata.py  test_plugin_autodiscovery.py  test_setup.py  test_stub.py  test_validation.py
tests/data/: example.csv  example.yaml  job_settings.json  sample_data.csv  sample_md.csv  sample_nested_data.parquet
