[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
(
  /(
      \.git
    | \.github
    | \.venv
  )/
)
'''

[tool.ruff]
select = ["ALL"]
ignore = [
  "ANN101", # Checks that instance method self arguments have type annotations
  "ANN102", # Checks that class method cls arguments have type annotations
  "D203",   # One blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
  "E501",   # Line too long
  "FBT001", # Boolean positional arg in function definition
  "FBT002", # Boolean default value in function definition
  "G004",   # Logging statement uses f-string
  "S101",   # Use of `assert` detected
]
target-version = "py311"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
unfixable = []
exclude = [".venv", "tests"]

[tool.poetry]
name = "pushcart"
version = "0.1.0"
description = "Metadata based ingestion and transformation library for Databricks"
authors = ["Georgel Preput <georgelpreput@mailbox.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
click = "^8.1.3"
joblib = "^1.2.0"
joblibspark = "^0.5.1"
pydantic = "^1.10.7"
python = "^3.10"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
setuptools = "^68.0.0"
tomli = "^2.0.1"

[tool.poetry.extras]
rest_api = ["pushcart-rest-api"]
app_insights = ["pushcart-app-insights"]

[tool.poetry.group.dev.dependencies]
black = { version = "*", allow-prereleases = true }
coverage = "^7.2.7"
dbx = "^0.8.7"
delta-spark = "^2.2.0"
hypothesis = "^6.70.1"
ipykernel = "^6.22.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pyspark = "^3.3.1"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
