[tool.pyright]
include = ["src", "tests"]
ignore = ["**/.pyenv"]
exclude = ["**/.pyenv"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
(
  /(
      \.git
    | \.github
    | \.venv
  )/
)
'''

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "ANN101", # Checks that instance method self arguments have type annotations
    "ANN102", # Checks that class method cls arguments have type annotations
    "D107",   # Missing docstring in __init__
    "D203",   # One blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "E501",   # Line too long
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition
    "G004",   # Logging statement uses f-string
    "N812",   # Checks for lowercase imports that are aliased to non-lowercase names
    "S101",   # Use of `assert` detected
]
target-version = "py311"

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []
exclude = [".venv", "tests"]
builtins = ["dbutils", "dlt", "display"]

[tool.ruff.lint.per-file-ignores]
"scratch/*" = ["D100", "E402", "ERA001", "INP001"]
".vscode/__builtins__.pyi" = ["D100", "INP001"]

[tool.poetry]
name = "pushcart"
version = "1.7.4"
description = "Metadata transformations for Spark"
authors = ["Victor Blaga <victor.blaga@revodata.nl>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "pushcart", from = "src" }]

[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
python = "^3.11"
loguru = "^0.7.2"
azure-monitor-opentelemetry = "^1.4.0"
opentelemetry-sdk = "^1.24.0"
delta-spark = "^3.1.0"
validators = "^0.28.1"
httpx = "^0.27.0"
authlib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
# Matching DBR 15.0
black = { version = "23.3.0", allow-prereleases = true }
databricks-sdk = "0.20.0"
ipykernel = "6.25.1"
ipywidgets = "8.0.4"
mypy-extensions = "^1.0.0"
pandas = "2.0.3"
pyarrow = "^14.0.1"
pydantic = "1.10.6"

# Not in DBR
bumpver = "^2023.1129"
coverage = "^7.5.0"
databricks-labs-pylint = "^0.4.0"
ipydatagrid = "^1.3.1"
mypy = "^1.5.1"
pandas-stubs = "^2.2.0.240218"
pre-commit = "^3.5.0"
pylint = "^3.1.0"
pyspark = "^3.5.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.1"
types-python-dateutil = "^2.9.0.20240316"
types-decorator = "^5.1.8.20240310"
types-protobuf = "^5.26.0.20240422"
types-pytz = "^2024.1.0.20240417"
types-requests = "^2.31.0.20240406"
types-setuptools = "^69.5.0.20240423"
types-six = "^1.16.21.20240425"
types-ujson = "^5.9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.7.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"$',
    '^current_version = "{version}"$',
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "./stubs"
files = "src/**/*.py, tests/**/*.py"
exclude = [".venv/"]
pretty = true

[[tool.mypy.overrides]]
module = ["dbutils", "dlt", "display"]
ignore_missing_imports = true
disable_error_code = ["name-defined"]
